wordpress/wp-content/themes/furrynoodles/style.css
/*
Theme Name: Furrynoodles
Theme URI: http://wordpress.org/themes/furrynoodles
Author: Tristan Allen and Clarence Lee
Author URI: http://tristanallen.co.uk/
Description: A furry noodley theme
Version: 1.0
License: GNU General Public License v2 or later
License URI: http://www.gnu.org/licenses/gpl-2.0.html
Tags: furry, noodley
Text Domain: furrynoodles

/* =Reset
-------------------------------------------------------------- */

html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	vertical-align: baseline;
}
body {
	line-height: 1;
}
ol,
ul {
	list-style: none;
}
blockquote,
q {
	quotes: none;
}
blockquote:before,
blockquote:after,
q:before,
q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}
caption,
th,
td {
	font-weight: normal;
	text-align: left;
}
h1,
h2{
	font-size:23px;
	margin-bottom:2px;
},
h3{
	font-size:17px;
	margin-bottom:2px;
},
h4,
h5,
h6 {
	clear: both;
}
html {
	overflow-y: scroll;
	font-size: 100%;
	-webkit-text-size-adjust: 100%;
	-ms-text-size-adjust: 100%;
}
a:focus {
	outline: thin dotted;
}
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
nav,
section {
	display: block;
}
audio,
canvas,
video {
	display: inline-block;
}
audio:not([controls]) {
	display: none;
}
del {
	color: #333;
}
ins {
	background: #fff9c0;
	text-decoration: none;
}
hr {
	background-color: #ccc;
	border: 0;
	height: 1px;
	margin: 24px;
	margin-bottom: 1.714285714rem;
}
sub,
sup {
	font-size: 75%;
	line-height: 0;
	position: relative;
	vertical-align: baseline;
}
sup {
	top: -0.5em;
}
sub {
	bottom: -0.25em;
}
small {
	font-size: smaller;
}
img {
	border: 0;
	-ms-interpolation-mode: bicubic;
}

/* Clearing floats */
.clear:after,
.wrapper:after,
.format-status .entry-header:after {
	clear: both;
}
.clear:before,
.clear:after,
.wrapper:before,
.wrapper:after,
.format-status .entry-header:before,
.format-status .entry-header:after {
	display: table;
	content: "";
}

/* color */

#site-navigation a:hover,
a,
a:hover{
  color: #333;
}

.work-client,
#site-navigation a{
	color: #888;
}

.site-title,
.title-font{
	font-family: "buena-park", serif;
	font-style: normal;
	font-weight: 400;
}

html,
body,
h1, h2, h3,
.title-font{
  font-size: 100%;
	font-family: "omnes-pro", sans-serif;
	font-style: normal;
	font-weight: 400;
}

.body-font{
	font-family: Verdana, sans-serif;
	font-style: normal;
	font-weight: 400;
}

html, body{
  font-size: 10px;
}

.body-font{
  font-size: 13px !important;
  font-size: 1.3rem !important;
  line-height: 1.5;
  color: #444;
}

#work-sidebar .work-related-item h3,
#work-sidebar .work-client,
#work-sidebar .excerpt{
  font-size: 1.4rem;
}

#container{
	font-size: 16px;
	font-size: 1.6rem;
  line-height: 1.4;
}

#work-sidebar .work-related-item h2
{
	font-size: 18px;
	font-size: 1.8rem;
}

#work-sidebar h2{
	font-size: 20px;
	font-size: 2rem;
}

.site-title{
	font-size: 36px;
	font-size: 3.6rem;
  line-height: 1;
}

a, a:hover{
  text-decoration: none;
}

.site-title{
	margin-bottom: 2px;
}

#site-navigation{
  text-align: center;
}

#site-navigation a{
  display: inline-block;
  margin-right: 16px;
  margin-right: 1.6rem;
}

body{
	/*border-top: 2px solid #888;*/
}

#masthead{
	text-align: center;
  width: 880px;
	margin: 8.6rem auto 8rem;
}

#logo{
  display: block;
  width: 229px;
  height: 33px;
  margin: 0 auto;
  background-image: url( 'css/graphics/logo7.jpg' );
  text-indent: -9999px;
  overflow: hidden;
}

#content{
	width: 990px;
	margin: 0 auto;
  margin-bottom: 124px;
}

.work-thumb{
	float: left;
	width: 480px;
  margin-bottom: 24px;
  margin-bottom: 3.6rem;
	clear: left;
}

.work-thumb img{
  margin-bottom: -2px;
  display: block;
}

.work-thumb .image{
  display: block;
  box-shadow: 0 0 1px #aaa;
  border-top-left-radius: 2px;
  border-top-right-radius: 2px;
  border-bottom-left-radius: 1px;
  border-bottom-right-radius: 1px;
}

.work-thumb .image:before{
  content: ".";
  display: block;
  overflow: hidden;
  text-indent: -999px;
  width: 100%;
  height: 14px;
  background-color: #acacac;
  background-image: url( 'css/graphics/buttons.png' );
  background-repeat: no-repeat;
  background-position: 5px 4px;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
  border-top-left-radius: 2px;
  border-top-right-radius: 2px;
}

.work-thumb .image:after{
  content: ".";
  display: block;
  overflow: hidden;
  text-indent: -999px;
  width: 100%;
  height: 10px;
  background-color: #acacac;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
}

.work-thumb .text{
  display: block;
  margin-top: 4px;
  margin-left: -1px;
}

.work-thumb.row-last{
  margin-left: 22px;
  clear: none;
}
.work-client{
	margin-top:8px;
}
.work-content{
	float:right;
}
#work-sidebar{
	width:240px;
  margin-right: 12px;
}
#work-sidebar h2{
	border-top: 2px solid #555;
	padding-top: 2px;
  font-weight: 500;
  color: #444;
  margin-bottom: -10px;
}
#work-sidebar .excerpt{
  margin: 14px 20px 0 0;
  margin: 1.4rem 20px 0 0;
}
#work-sidebar .excerpt p{
  margin-bottom: 14px;
  margin-bottom: 1.4rem;
}
#work-main{
	width: 736px;
	min-width:600px;
	max-width:1024px;
	border-top: 2px solid #555;
  padding-top: 11px;
}
#work-main img{
  width: 734px !important;
  height: auto !important;
}
#work-main .image{
  margin-bottom: 20px;
}
#work-main .image img{
  vertical-align: top;
}
#work-related-items{
  clear: both;
  width: 988px;
  margin: 36px auto 0;
  margin: 3.6rem auto 0;
  padding-top: 20px;
}
#work-related-items h2{
  float: left;
  width: 198px;
}
#work-related-items .work-related-item{
  margin-bottom: 18px;
  float: left;
  margin-right: 12px;
  width: 200px;
}
#work-related-items .work-related-item h3{
  line-height: 1;
}
#work-related-items .work-related-item .work-client{
  display: block;
  margin: 0;
}
#work-related-items .work-related-item img{
  width: 200px !important;
  height: 124px !important;
}
.about-us{
  margin: 0 auto;
  width: 812px;
}
.introduction{
  font-size:30px;
}
.introduction p{
  margin-top: -10px;
  font-family: "buena-park";
  margin-bottom: 50px;
  color:#3a3b3d;
}
.about-us img{
  width: 812px;
  background: #888;
  border: 1px solid #444;
}
.people{
  padding-bottom: 35px;
  margin-bottom: 35px;
  border-bottom:1px solid #ccc;
}
.person{
  width: 400px;
  float: left;
  margin: 0 12px 0 0;
}
.person:last-child{
  margin-right: 0;
}
.keyline{
	border:1px solid #bbb;
	display: inline-block;
}

/** ABOUT **/
.introduction{
  text-align: center;
  margin-bottom: 20px;
}
.services-skills{
  margin:0 auto;
  margin-bottom: 20px;
}
.services-skills ul li{
  text-align: center;
  width: 25%;
  color: #999;
}
.services-skills li{
  float:left;
}
.person h3{
  font-weight: 600;
}
.person p{
  padding-bottom: 10px;
  margin-bottom: 10px;
  border-bottom:1px solid #ccc;
  height:67px;
}

#work-related-sidebar{
  width: 240px;
  margin-right: 12px;
  border-top: 1px solid #555;
  padding-top: 40px;
}
#work-related-main{
  width: 736px;
  min-width: 600px;
  max-width: 1024px;
  border-top: 1px solid #555;
  padding-top: 40px;
}

